WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123454
SessionState.h should not include WebBackForwardList.h
https://bugs.webkit.org/show_bug.cgi?id=123454
Summary
SessionState.h should not include WebBackForwardList.h
Gavin Barraclough
Reported
2013-10-29 11:35:40 PDT
WebBackForwardList is a UIProcess type, SessionState is in shared code. Also, WebBackForwardListItemVector should be in WebBackForwardListItem.h, not WebBackForwardList.h (the vector type is used in the WebProcess, the item header is shared but the list type is in the UIProcess).
Attachments
Fix
(5.20 KB, patch)
2013-10-29 11:38 PDT
,
Gavin Barraclough
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2013-10-29 11:38:48 PDT
Created
attachment 215406
[details]
Fix
Geoffrey Garen
Comment 2
2013-10-29 11:39:30 PDT
Comment on
attachment 215406
[details]
Fix r=me
WebKit Commit Bot
Comment 3
2013-10-29 11:40:57 PDT
Attachment 215406
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/Shared/SessionState.cpp', u'Source/WebKit2/Shared/SessionState.h', u'Source/WebKit2/Shared/WebBackForwardListItem.h', u'Source/WebKit2/Shared/WebPageCreationParameters.h', u'Source/WebKit2/UIProcess/WebBackForwardList.h', u'Source/WebKit2/WebProcess/WebPage/DrawingArea.cpp', u'Source/WebKit2/WebProcess/WebPage/WebPage.cpp']" exit_code: 1 Source/WebKit2/WebProcess/WebPage/WebPage.cpp:88: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 4
2013-10-29 12:41:48 PDT
Fixed in
r158210
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug