Source/WebKit2/UIProcess/WebBackForwardList.h
@@ -39,8 +39,6 @@
 
 namespace WebKit {
 
-typedef Vector<RefPtr<WebBackForwardListItem>> BackForwardListItemVector;
-
 /*
  *          Current
  *   |---------*--------------| Entries
